--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1 th:text="'これはThymeleafですか？'">ｈｔｍｌ－見出し１</h1>
     <p>はい、SpringBootで推奨されています。</p>
+    <div th:text="'Hello, ' + ${target} + '!!'"></div>
 </body>
 </html>
